ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-poc
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: 4673b26036bf408ea2a2.eastus.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-poc
          servicePort: 80
